tests/algorithms/x/C/web_programming/recaptcha_verification.c
// Generated by Mochi 0.10.32 on 2025-08-24 09:44 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


size_t append_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

typedef struct { const char **keys; const char **vals; size_t len; size_t cap; } MapSS;

typedef struct { const char **keys; int *vals; size_t len; size_t cap; } MapSI;

static int map_get_si(const char *keys[], const int vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct Anon1 Anon1;
typedef struct Request Request;

struct Anon1 {
};

struct Request {
    const char* method;
    MapSS post;
};

Request get_request = (Request){.method = "GET", .post = (MapSS){0}};
Request ok_request = (Request){.method = "POST", .post = (MapIL){0}};
Request bad_request = (Request){.method = "POST", .post = (MapIL){0}};

MapSI http_post(const char* secret, const char* client);
long long authenticate(const char* username, const char* password);
void login(const char* _user);
const char* render(const char* page);
const char* redirect(const char* url);
const char* login_using_recaptcha(Request request);
int main(void);

MapSI http_post(const char* secret, const char* client) {
    long long success = (strcmp(secret, "secretKey") == 0) && (strcmp(client, "clientKey") == 0);
    {
        const char** __ret1_keys = malloc(1 * sizeof(char*));
        int *__ret1_vals = malloc(1 * sizeof(int));
        __ret1_keys[0] = "success";
        __ret1_vals[0] = success;
        MapSI __ret1 = { __ret1_keys, __ret1_vals, 1, 17 };
        return __ret1;
    }
}

long long authenticate(const char* username, const char* password) {
    return (strcmp(username, "user") == 0) && (strcmp(password, "pass") == 0);
}

void login(const char* _user) {
}

const char* render(const char* page) {
    return str_concat("render:", page);
}

const char* redirect(const char* url) {
    return str_concat("redirect:", url);
}

const char* login_using_recaptcha(Request request) {
    const char* secret_key = "secretKey";
    if (strcmp(request.method, "POST") != 0) {
        return render("login.html");
    }
    const char* username = map_get_ss(request.post.keys, request.post.vals, request.post.len, "username");
    const char* password = map_get_ss(request.post.keys, request.post.vals, request.post.len, "password");
    const char* client_key = map_get_ss(request.post.keys, request.post.vals, request.post.len, "g-recaptcha-response");
    MapSI response = http_post(secret_key, client_key);
    if (map_get_si(response.keys, response.vals, response.len, "success")) {
        if (authenticate(username, password)) {
            login(username);
            return redirect("/your-webpage");
        }
    }
    return render("login.html");
}

int main(void) {
    {
        long long __start = _now();
        puts(login_using_recaptcha(get_request));
        puts(login_using_recaptcha(ok_request));
        puts(login_using_recaptcha(bad_request));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
